--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
+	<meta name="google-site-verification" content="jm9NS4Oz9h1gjswU7ly66X5ciCt6jIDnnYHCSwk83aU" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Electricidad del Automovil</title>
         <meta name="description" content="">
