--- a/index.html
+++ b/index.html
@@ -427,6 +427,7 @@
                                         <h2 STYLE="text-align:center"><div class="flowus">
 											SEGUINOS EN: 
                                             <a href="https://www.instagram.com/electricidadcasado/"><i STYLE="font-size:30px" class="fa fa-instagram"></i></a> 
+                                            <a href="https://www.facebook.com/pg/Casado-Electricidad-Automotor-100639521459920/posts/?ref=page_internal"><i STYLE="font-size:30px" class="fa fa-facebook"></i></a> 
                                             <a href="https://www.youtube.com/channel/UCFwoWSaFlmQczGNrctOY9qQ/videos"><i STYLE="font-size:30px" class="fa fa-youtube"></i></a> 
                                         </div>
 										</H2>
