--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="google-site-verification" content="jm9NS4Oz9h1gjswU7ly66X5ciCt6jIDnnYHCSwk83aU" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Electricidad del Automovil</title>
+	<link rel="icon" type="image/jpg" sizes="32x32" href="https://i.ibb.co/dPQsVmr/favicon.jpg">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
