--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                         <div class="main_history">
                             <div class="col-sm-6">
                                 <div class="single_history_img">
-                                    <img src="assets/images/stab1.png" alt="" />
+                                    <img src="https://i.ibb.co/YNFWdZS/stab1.png" alt="" />
                                 </div>
                             </div>
 
@@ -248,40 +248,40 @@
                             <div style="clear:both;"></div>     
                             <div id="portfoliowork"> 
                                 <div class="single_portfolio tile scale-anm web grid-item-width2 video" >
-                                    <img src="assets/images/pf1.jpeg" alt="" />
-                                    <a href="assets/images/pf1.jpeg" class="portfolio-img">
+                                    <img src="https://i.ibb.co/tM1NQWq/pf1.png" alt="" />
+                                    <a href="https://i.ibb.co/tM1NQWq/pf1.png">
                                         <div class="grid_item_overlay">
                                             <div class="separator4"></div>
                                         </div>
                                     </a>
                                 </div>
                                 <div class="single_portfolio tile scale-anm bcards photo" >
-                                    <img src="assets/images/pf2.jpeg" alt="" />
-                                    <a href="assets/images/pf2.jpeg" class="portfolio-img">
+                                    <img src="https://i.ibb.co/dBrNkLT/pf2.png" alt="" />
+                                    <a href="https://i.ibb.co/dBrNkLT/pf2.png" class="portfolio-img">
                                         <div class="grid_item_overlay">
                                             <div class="separator4"></div>
                                         </div>
                                     </a>
                                 </div>
                                 <div class="single_portfolio tile scale-anm web video">
-                                    <img src="assets/images/pf3.jpeg" alt="" />
-                                    <a href="assets/images/pf3.jpeg" class="portfolio-img">
+                                    <img src="https://i.ibb.co/Jp0cnc8/pf3.png" alt="" />
+                                    <a href="https://i.ibb.co/Jp0cnc8/pf3.png" class="portfolio-img">
                                         <div class="grid_item_overlay">
                                             <div class="separator4"></div>
                                         </div>
                                     </a>
                                 </div>
                                 <div class="single_portfolio tile scale-anm web photo" >
-                                    <img src="assets/images/pf4.jpeg" alt="" />
-                                    <a href="assets/images/pf4.jpeg" class="portfolio-img">
+                                    <img src="https://i.ibb.co/qg8PPn9/pf4.png" alt="" />
+                                    <a href="https://i.ibb.co/qg8PPn9/pf4.png" class="portfolio-img">
                                         <div class="grid_item_overlay">
                                             <div class="separator4"></div>
                                         </div>
                                     </a>
                                 </div>
                                 <div class="single_portfolio tile scale-anm bcards design" >
-                                    <img src="assets/images/pf5.jpeg" alt="" />  
-                                    <a href="assets/images/pf5.jpeg" class="portfolio-img">
+                                    <img src="https://i.ibb.co/BVyJMq4/pf5.png" alt="" />  
+                                    <a href="https://i.ibb.co/BVyJMq4/pf5.png" class="portfolio-img">
                                         <div class="grid_item_overlay">
                                             <div class="separator4"></div>
                                         </div>
@@ -289,16 +289,16 @@
                                 </div>
 
                                 <div class="single_portfolio tile scale-anm flyers video design">
-                                    <img src="assets/images/pf6.jpeg" alt="" />
-                                    <a href="assets/images/pf6.jpeg" class="portfolio-img">
+                                    <img src="https://i.ibb.co/tKhRBcy/pf6.png" alt="" />
+                                    <a href="https://i.ibb.co/tKhRBcy/pf6.png" class="portfolio-img">
                                         <div class="grid_item_overlay">
                                             <div class="separator4"></div>
                                         </div>
                                     </a>
                                 </div>
                                 <div class="single_portfolio tile scale-anm photo flyers">
-                                    <img src="assets/images/pf7.jpeg" alt="" />
-                                    <a href="assets/images/pf7.jpeg" class="portfolio-img">
+                                    <img src="https://i.ibb.co/S5rLZk5/pf7.png" alt="" />
+                                    <a href="https://i.ibb.co/S5rLZk5/pf7.png" class="portfolio-img">
                                         <div class="grid_item_overlay">
                                             <div class="separator4"></div>
                                         </div>
@@ -306,8 +306,8 @@
                                 </div>
 
                                 <div class="single_portfolio tile scale-anm bcards video" >
-                                    <img src="assets/images/pf8.jpeg" alt="" />
-                                    <a href="assets/images/pf8.jpeg" class="portfolio-img">
+                                    <img src="https://i.ibb.co/nQw0WQX/pf8.png" alt="" />
+                                    <a href="https://i.ibb.co/nQw0WQX/pf8.png" class="portfolio-img">
                                         <div class="grid_item_overlay">
                                             <div class="separator4"></div>
                                         </div>
