--- a/index.html
+++ b/index.html
@@ -353,35 +353,35 @@
                                     <ul>
                                         <li>
                                             <div class="single_team_img">
-                                                <img src="assets/images/team1.jpg" alt="" />
+                                                <img src="assets/images/team1.webp" alt="" />
                                             </div>
                                             <div class="single_team_text">
                                             </div>
                                         </li>
                                         <li>
                                             <div class="single_team_img">
-                                                <img src="assets/images/team2.jpg" alt="" />
+                                                <img src="assets/images/team2.webp" alt="" />
                                             </div>
                                             <div class="single_team_text">
                                             </div>
                                         </li>
                                         <li>
                                             <div class="single_team_img">
-                                                <img src="assets/images/team3.jpg" alt="" />
+                                                <img src="assets/images/team3.webp" alt="" />
                                             </div>
                                             <div class="single_team_text">
                                             </div>
                                         </li>
                                         <li>
                                             <div class="single_team_img">
-                                                <img src="assets/images/team4.jpg" alt="" />
+                                                <img src="assets/images/team4.webp" alt="" />
                                             </div>
                                             <div class="single_team_text">
                                             </div>
                                         </li>
                                         <li>
                                             <div class="single_team_img">
-                                                <img src="assets/images/test2.jpg" alt="" />
+                                                <img src="assets/images/test2.webp" alt="" />
                                             </div>
                                             <div class="single_team_text">
                                             </div>
