--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
                             <div style="clear:both;"></div>     
                             <div id="portfoliowork"> 
-                                <div class="single_portfolio tile scale-anm web grid-item-width2 video" >
+                                <div class="single_portfolio tile scale-anm bcards photo" >
                                     <img src="assets/images/pf1.webp" alt="" />
                                     <a href="assets/images/pf1.webp">
                                         <div class="grid_item_overlay">
