--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                             <div id="portfoliowork"> 
                                 <div class="single_portfolio tile scale-anm bcards photo" >
                                     <img src="assets/images/pf1.webp" alt="" />
-                                    <a href="assets/images/pf1.webp">
+                                    <a href="assets/images/pf1.webp" class="portfolio-img">
                                         <div class="grid_item_overlay">
                                             <div class="separator4"></div>
                                         </div>
