--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
 
             <section id="portfolio" class="portfolio sections">
-                <div class="container-fluid">
+              <!--  <div class="container-fluid">
                     <div class="row">
                         <div class="main_portfolio">
                             <div class="col-sm-12">
@@ -314,7 +314,11 @@
 							
                         </div>
                     </div>
-                </div><!-- End off container --> 
+                </div> End off container --> 
+	
+	
+	
+	<div class='embedsocial-instagram' data-ref="70c2918385bd2ca1610d5722a3922a6b8431d5dc"></div><script>(function(d, s, id){var js; if (d.getElementById(id)) {return;} js = d.createElement(s); js.id = id; js.src = "https://embedsocial.com/embedscript/in.js"; d.getElementsByTagName("head")[0].appendChild(js);}(document, "script", "EmbedSocialInstagramScript"));</script>
             </section> <!-- End off Work Section -->            
 
 
