--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
            
 
 
-            <section id="portfolio" class="portfolio sections">
+            <section id="portfolio" class="portfolio sections" style="background:black">
               <!--  <div class="container-fluid">
                     <div class="row">
                         <div class="main_portfolio">
