--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
 	<meta name="google-site-verification" content="jm9NS4Oz9h1gjswU7ly66X5ciCt6jIDnnYHCSwk83aU" />
 	<meta name="description" content="Se realizan trabajos de electricidad automotor, alternadores, arranques, instalaciones en general.">
-	<meta name="keywords" content="+Electricidad +Automotor, +Electricidad +auto +Necochea, +Electricista, Electricista, +Auto, Quequén ">
+	<meta name="keywords" content="+Electricidad +Automotor, +Maquinas +Agricolas , +Electricidad +auto +Necochea, +Electricista, Electricista, +Auto, Quequén ">
   	<meta name="author" content="Learn Skill">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Electricidad del Automotor</title>
