--- a/factura/index.html
+++ b/factura/index.html
@@ -449,7 +449,7 @@
 	
     <div class="card text-center" style="">
         <div class="card-body">		
-        	<h4 style="text-alignn:center;color:black;"><b>Tel:</b> <a href="tel:2262594035">2262-594035</a> - <b>Web:</b><a href="https://www.electricidadcasadocom.ar/"> https://www.electricidadcasado.com.ar/</a></h4>
+        	<h4 style="text-alignn:center;color:black;"><b>Tel:</b> <a href="tel:2262594035">2262-594035</a> - <b>Web:</b><a href="https://www.electricidadcasado.com.ar/"> https://www.electricidadcasado.com.ar/</a></h4>
 		</div> 
 	</div>	
 	
